--- a/chirp/meta.yaml
+++ b/chirp/meta.yaml
@@ -16,7 +16,7 @@ build:
     - cpitchstats = chirp.misc.pitchstats:main
 
 source:
-  git_url: git@github.com:dmeliza/chirp.git
+  git_url: https://github.com/melizalab/chirp.git
   git_tag: 1.2.2
 
 requirements:
